# Web_Controls_STM32

./: Cargo.toml  README.md  index.html  makefile  pc.elf
drivers/: driver.hpp
out_dir/: blink.elf
pc/: Cargo.toml
pc/src/: data.rs  main.rs  server.rs  usart.rs
src/: main.cpp
startup/: startup.c
web/: index.html  index.js
