[package]
name = "stm"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-serial = { version = "5.4.5" }
tokio = { version = "1.48", features = ["full"] }
warp = { version = "0.4", features = ["server"]}
serde = { version = "1.0", features = ["derive"]}

[[bin]]
name = "pc"
path = "./pc/src/main.rs"
